[package]
name = "probe-rs-target"
version.workspace = true
edition.workspace = true
description = "Target description schema for probe-rs."
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories = ["embedded", "hardware-support", "development-tools::debugging"]
keywords = ["embedded"]
license.workspace = true

[dependencies]
base64 = "0.21.7"
jep106 = "0.2.8"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1"
url = { version = "2", features = ["serde"] }

[dev-dependencies]
insta = "1"
