[package]
name = "probe-rs-targets"
version = "0.2.0"
authors = ["Noah Hüsser <yatekii@yatekii.ch>", "Dominik Boehi <dominik.boehi@gmail.ch>"]
edition = "2018"
description = "A collection of on chip debugging tools to comminicate with ARM chips."
documentation = "https://docs.rs/probe-rs-targets/"
homepage = "https://github.com/probe-rs/probe-rs"
repository = "https://github.com/probe-rs/probe-rs"
readme = "../README.md"
categories = ["embedded", "hardware-support", "development-tools::debugging"]
keywords = ["embedded"]
license = "MIT OR Apache-2.0"

build = "build.rs"

[dependencies]
phf = { version = "0.7.24", default-features = false  }
probe-rs = { path = "../probe-rs", version = "0.2.0" }
lazy_static = "1.4.0"

[build-dependencies]
quote = "1.0.2"
log = "0.4.6"
probe-rs = { path = "../probe-rs", version = "0.2.0" }