[package]
name = "probe-rs-tools"
version.workspace = true
edition.workspace = true
documentation.workspace = true
# This is used by cargo-dist when creating the homebrew package.
# Using homepage.workspace seems to fail when cargo-dist is used.
homepage = "https://probe.rs"
repository.workspace = true
readme.workspace = true
license.workspace = true

description = "A collection of on chip debugging tools to communicate with microchips."

default-run = "probe-rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = "0.22"
docsplay = { workspace = true }
jep106 = "0.2"
num-traits = "0.2"
scroll = "0.12"
serde = { version = "1", features = ["derive"] }
thiserror = { workspace = true }
tracing = "0.1"
typed-path = "0.9"
web-time = { workspace = true }

# path
probe-rs-mi = { workspace = true }

itertools = "0.14"

# CLI-only
# capstone = "0.12"

cargo_metadata = "0.19"
clap = { version = "4", features = ["derive", "env"] }
colored = "2"
defmt-decoder = "0.4"
directories = "5"
dunce = "1"
figment = { version = "0.10", features = ["toml", "json", "yaml", "env"] }
goblin = { version = "0.9", default-features = false, features = [
    "std",
    "elf32",
    "elf64",
    "endian_fd",
] }
indicatif = "0.17"
insta = { version = "1.38", default-features = false, features = ["yaml"] }
itm = { version = "0.9.0-rc.1", default-features = false }
parse_int = "0.6"
libtest-mimic = "0.8.0"
fastrand = "2.1"
rustyline = { version = "14", default-features = false, features = [
    # "with-dirs",
    # "with-file-history",
] }
sanitize-filename = "0.6"
schemafy = "0.6"
serde_json = "1.0.116"
# Version 0.14.6 fails to compile


probe-rs-debug = { version = "0.25.0", path = "../probe-rs-debug" }
pollster = "0.4"
futures-lite = "2"

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
signal-hook = { version = "0.3", default-features = false }

[build-dependencies]
git-version = "0.3"

[dev-dependencies]
pretty_assertions = "1.4.0"
test-case = "3"

# Set the proper name for the homebrew formula
[package.metadata.dist]
formula = "probe-rs"

[lints]
workspace = true
