[package]
name = "probe-rs-tools"
version.workspace = true
edition.workspace = true
documentation.workspace = true
# This is used by cargo-dist when creating the homebrew package.
# Using homepage.workspace seems to fail when cargo-dist is used.
homepage = "https://probe.rs"
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

description = "A collection of on chip debugging tools to communicate with microchips."

default-run = "probe-rs"

[features]
default = []
# Include server/client functionality
remote = [
  "dep:tokio-tungstenite",
  "dep:axum",
  "dep:axum-extra",
  "dep:rustls",
  "dep:tempfile",
]

[dependencies]
anyhow = { workspace = true }
base64 = "0.22"
docsplay = { workspace = true }
jep106 = "0.3"
num-traits = "0.2"
scroll = "0.13"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = { workspace = true }
tracing = "0.1"
typed-path = "0.12"
espflash = { version = "4", default-features = false }

itertools = "0.14"

# CLI-only
addr2line = "0.26"
bytesize = "2"
capstone = "0.14"
cargo_metadata = "0.23"
clap = { version = "4", features = ["derive", "env"] }
colored = "3"
defmt-decoder = "1.0"
directories = "6"
dunce = "1"
figment = { version = "0.10", features = ["toml", "json", "yaml", "env"] }
ihex = "3.0"
indicatif = "0.18"
insta = { version = "1.38", default-features = false, features = ["yaml"] }
itm = { version = "0.9.0-rc.1", default-features = false }
parse_int = "0.9"
libtest-mimic = "0.8.0"
fastrand = "2.1"
object = { version = "0.38", default-features = false, features = [
  "elf",
  "read_core",
  "std",
] }
rustyline-async = "0.4.7"
sanitize-filename = "0.6"
schemafy = "0.6"
serde_json = "1.0.116"
signal-hook = { version = "0.3", default-features = false }
# Version 0.14.6 fails to compile
svd-parser = { version = "=0.14.9", features = ["expand"] }
termtree = "0.5"
textwrap = { version = "0.16", default-features = false, features = [
  "unicode-linebreak",
  "unicode-width",
] }
time = { version = "0.3", default-features = false, features = [
  "formatting",
  "macros",
  "local-offset",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
ratatui = { version = "0.30.0", default-features = false, features = [
  "crossterm",
] }
ansi-parser = "0.9.0"
linkme = "0.3.25"

parking_lot = "0.12.2"
cargo-config2 = "0.1.26"
clap_complete = "4.5.2"
regex = "1.10.4"
zip = { version = "6.0.0", default-features = false, features = [
  "deflate",
  "time",
] }
urlencoding = "2"
svg = "0.18"

probe-rs = { version = "0.31.0", path = "../probe-rs" }
probe-rs-debug = { version = "0.31.0", path = "../probe-rs-debug" }
probe-rs-mi.workspace = true
probe-rs-target.workspace = true
probe-rs-espressif.workspace = true

# Server-only
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = { version = "0.3" }
rustls = { version = "0.23", default-features = false, features = [
  "std",
  "ring",
], optional = true }
tokio-tungstenite = { version = "0.28", features = [
  "rustls-tls-webpki-roots",
], optional = true }
axum = { version = "0.8", features = ["ws"], optional = true }
axum-extra = { version = "0.12", features = ["typed-header"], optional = true }
tempfile = { version = "3.0", optional = true }
postcard = { version = "1.0", features = ["use-std"] }
postcard-rpc = { version = "0.12.0", features = ["use-std"] }
postcard-schema = { version = "0.2.0", features = ["use-std", "derive"] }
sha2 = "0.10"

# gdb server
gdbstub = "0.7.6"

[build-dependencies]
git-version = "0.3"

[dev-dependencies]
pretty_assertions = "1.4.0"
test-case = "3"
probe-rs = { version = "0.31.0", path = "../probe-rs", features = ["test"] }

# Set the proper name for the homebrew formula
[package.metadata.dist]
formula = "probe-rs"

[lints]
workspace = true
