[package]
name = "probe"
version = "0.1.0"
authors = ["Noah Hüsser <yatekii@yatekii.ch>"]
edition = "2018"

[dependencies]
memory = { path = "../memory" }
coresight = { path = "../coresight"}
query_interface = "*"
log = "0.4.6"
bitfield = "*"
bitflags = "*"
ihex = "1.1.2"
scroll = "*"
serde = "1.0.99"
crc = "1.8.1"
derivative = "1.0.3"
goblin = "0.0.24"
object = "0.14.0"