[package]
name = "probe-rs-rtt"
description = "Host side implementation of the RTT (Real-Time Transfer) I/O protocol over probe-rs"
version = "0.13.0"
edition = "2021"
readme = "../README.md"
keywords = ["embedded", "debugging", "rtt"]
license = "MIT"
authors = ["Matti Virkkunen <mvirkkunen@gmail.com>"]
repository = "https://github.com/probe-rs/probe-rs"

[dependencies]
log = "0.4.8"
probe-rs = { version = "0.13.0", path = "../probe-rs" }
scroll = "0.10.1"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.11"
