[package]
name = "probe-rs-rtt"
description = "Host side implementation of the RTT (Real-Time Transfer) I/O protocol over probe-rs"
version.workspace = true
edition.workspace = true
readme = "README.md"
keywords = ["embedded", "debugging", "rtt"]
license = "MIT"
authors = ["Matti Virkkunen <mvirkkunen@gmail.com>"]
repository.workspace = true

[dependencies]
tracing = { version = "0.1.37", features = ["log"] }
probe-rs = { version = "0.14.2", path = "../probe-rs" }
scroll = "0.10.1"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.11"
