[package]
name = "rtthost"
description = "RTT (Real-Time Transfer) client"
version.workspace = true
edition = "2024"
license = "MIT"
authors = ["Matti Virkkunen <mvirkkunen@gmail.com>"]
repository.workspace = true

[dependencies]
env_logger = "0.11"
probe-rs.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["cargo", "derive"] }

[lints]
workspace = true
